unpackaged/objects/T_E_Attachements__c.object
<CustomObject>
  <description>This is to replace the standard Notes and Attachments against Contacts, will be used only for the HQ T&amp;E to store sensitive attachments for "Speaker/KOL Contracts" to hide this information from the Contact Owner.  This new object will help us to control the security.</description>
  <fields>
    <fullName>Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Resume</fullName>
        </value>
        <value>
          <fullName>Photo</fullName>
        </value>
        <value>
          <fullName>Passport Copies</fullName>
        </value>
        <value>
          <fullName>Speaker Agreement</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Contract</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Linke to the Speaker Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KOL/Speaker Attachments</relationshipLabel>
    <relationshipName>T_E_Attachments</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>KOL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KOL Contract</label>
    <referenceTo>KOL_Contract__c</referenceTo>
    <relationshipLabel>KOL/Speaker Attachments</relationshipLabel>
    <relationshipName>KOL_Speaker_Attachments</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Speaker_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The link to the corresponding Speaker Engagement</description>
    <label>Speaker Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>KOL/Speaker Attachments</relationshipLabel>
    <relationshipName>KOL_Speaker_Attachments</relationshipName>
    <type>Lookup</type>
  </fields>
  <label>KOL/Speaker Attachment</label>
  <nameField>
    <label>T&amp;E Attachements Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>KOL/Speaker Attachments</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
  <validationRules>
    <fullName>Either_Contact_or_Speaker_field_mandator</fullName>
    <active>true</active>
    <description>You must fill in either the Contact or Speaker Engagement fields - or both</description>
    <errorConditionFormula>Contact__c = null   &amp;&amp;   Speaker_Engagement__c = null  &amp;&amp;  KOL_Contract__c = null</errorConditionFormula>
    <errorMessage>You must fill in either the Contact, KOL Contract or Speaker Engagement fields - or both</errorMessage>
  </validationRules>
</CustomObject>